2008-08-26  Sanel <karijes@users.sourceforge.net>

	* src/Config.cpp: s/EASSERT/E_ASSERT; save() will not leave blank line at 
	the end of file; refactored some pieces

2008-08-25  Sanel <karijes@users.sourceforge.net>

	* edelib/Sound.h, src/Sound.cpp: removed
	* src/Jamfile: dumped Sound.cpp
	* Jamconfig.in, configure.in, test/xdg/Jamfile, test/Jamfile,
	test/edelib-dbus-introspect/Jamfile: removed SOUND variable and substitute
	variable
	* configure.in: remove EDE_SOUND macro
	* m4/initjamfile.m4: replaced with modified version from ede2 module
	* configure.in: EDELIB_INIT_JAM moved at the end (before substitutions)
	so in case values are changed in configure.in, it can catch them
	* tools/install-sh: removed
	* configure.in: removed needs for install-sh and AC_PROG_INSTALL, edelib
	is installed via jam facility; also removed clearing multiple ending
	slashes in $prefix since m4/initjamfile.m4 already have code doing that

2008-08-24  Sanel <karijes@users.sourceforge.net>

	* edelib/DesktopFile.h, src/DesktopFile.cpp: added create_new()
	for creating .desktop files from scratch or clearing currently hold data,
	which was issue before. Also, some code clarifications with E_RETURN_XXX
	functions.

2008-08-23  Sanel <karijes@users.sourceforge.net>

	* Jamrule: cleaned SymLink rule and SymLink1 action

2008-08-22  Sanel <karijes@users.sourceforge.net>

	* test/examples: moved in source root directory
	* INSTALL: refreshing
	* test/old: removed
	* test/xdg: added; a directory where some XDG specifications are compared
	with pyxdg for correctnes
	* m4/libxpm.m4: added missing 'FLTKLIBS_FULL="$FLTKLIBS_FULL -lXpm"'
	* Jamrule, Jamconfig.in: replaced libtool backed for shared library creating with handcoded
	* Jamrule: InstallSharedLibrary will install library with .so.X.X.X
	extension, not .so as before
	* tools/edelib-dbus-introspect/Jamfile, test/xdg/Jamfile: let missing libraries 
	be linked if shared library is requested
